# FalkorDB

./: .codecov.yml  .coderabbit.yaml  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COVERAGE_IMPROVEMENTS.md  Cargo.toml  FINAL_SUMMARY.md  LICENSE.txt  MEMORY_ANALYSIS.md  Makefile  NODETACH_DELETE_TEST_RESULTS.md  README.md  SECURITY.md  build.sh  code_of_conduct.md  codecov.yml  dump.rdb  gen_prejit.sh  llvm.sh.8  ramp.yml  test_json.py  wordlist.dic
.github/: HOMEBREW_SETUP_CHECKLIST.md  HOMEBREW_TAP_SETUP.md  copilot-instructions.md  dependabot.yml  wordlist.txt
.github/workflows/: batch-backport.yml  benchmark.yml  browser-tests-trigger.yml  build-macos.yml  build-optimized.yml  build.yml  codeql-analysis.yml  coverage.yml  daily-trivy-scan.yml  dependency-review.yml  homebrew.yml  micro-benchmark.yml  release-drafter.yml  release-image.yml  release-ramp.yml  sanitize.yml  scorecards.yml  snap.yml  spellcheck.yml  submodule-update.yml  trigger-falkordb-cloud-update.yml
Formula/: README.md
demo/: __init__.py
demo/imdb/: imdb_demo.py  imdb_queries.py  imdb_utils.py  requirements.txt
demo/social/: requirements.txt  social_demo.py  social_queries.py  social_utils.py
docs/: CRASH_ISSUES_REVIEW.md  KEYSPACE_NOTIFICATIONS.md  mmap_allocator.md
redisgraph-bench/: ENTITY_COUNT-results.json  EXPLICIT-EDGE-DELETION-results.json  GRAPH500-SCALE_18-EF_16-1_HOP-results.json  GRAPH500-SCALE_18-EF_16-1_HOP_MIXED_READ_65perc_WRITE_25perc_DEL_10perc-results.json  GRAPH500-SCALE_18-EF_16-1_HOP_MIXED_READ_75perc_WRITE_25perc-results.json  GRAPH500-SCALE_18-EF_16-2_HOP-results.json  GRAPH500-SCALE_18-EF_16-2_HOP_MIXED_READ_75perc_WRITE_25perc-results.json  GRAPH500-SCALE_18-EF_16-3_HOP-results.json  GRAPH500-SCALE_18-EF_16-3_HOP_MIXED_READ_75perc_WRITE_25perc-results.json  IMPLICIT-EDGE-DELETION-results.json  INSPECT-EDGES-results.json  MIX_READ_WRITE-results.json  NODE-BATCH-DELETE-results.json  NODE-INDEX-LOOKUP-results.json  SORT_ENTITIES-results.json  UPDATE-BASELINE-results.json  VARIABLE-LENGTH-FILTER-results.json  VARIABLE_LENGTH_EXPAND_INTO-results.json  allShortestPaths-10hop-100Kpaths-results.json  allShortestPaths-4hop-10Kpaths-results.json
sbin/: pack.sh
scripts/: test-homebrew-formula.sh
snap/: README.md  snapcraft.yaml
src/: RG.h  common.h  debug.c  debug.h  errors.c  falkordb.ver  globals.c  globals.h  module.c  module_event_handlers.c  module_event_handlers.h  property_path.c  property_path.h  query_ctx.c  query_ctx.h  redismodule.h  value.c  value.h  version.h
src/algorithms/: LAGr_BreadthFirstSearch_MaxLevel.c  LAGr_BreadthFirstSearch_MaxLevel.h  algorithms.h  all_neighbors.c  all_neighbors.h  all_paths.c  all_paths.h  all_shortest_paths.c  all_shortest_paths.h  bfs.c  bfs.h  degree.c  degree.h  detect_cycle.c  detect_cycle.h  dfs.c  dfs.h  longest_path.c  longest_path.h  pagerank.c  pagerank.h  wcc.c  wcc.h
src/arithmetic/: algebraic_expression.h  arithmetic_expression.c  arithmetic_expression.h  arithmetic_expression_clone.c  arithmetic_expression_construct.c  arithmetic_expression_construct.h  arithmetic_expression_equals.c  arithmetic_expression_eval.h  arithmetic_expression_eval_batch.c  arithmetic_expression_reduce.c  arithmetic_op.c  arithmetic_op.h  func_desc.c  func_desc.h  funcs.c  funcs.h
src/ast/: ast.c  ast.h  ast_annotations_ctx_collection.c  ast_annotations_ctx_collection.h  ast_build_filter_tree.c  ast_build_filter_tree.h  ast_build_op_contexts.c  ast_build_op_contexts.h  ast_build_reference_map.c  ast_build_value.c  ast_build_value.h  ast_enrich.c  ast_mock.c  ast_mock.h  ast_rewrite_call_subquery.c  ast_rewrite_call_subquery.h  ast_rewrite_filters.c  ast_rewrite_same_clauses.c  ast_rewrite_same_clauses.h  ast_rewrite_star_projections.c  ast_rewrite_star_projections.h  ast_rewrites.h  ast_shared.c  ast_shared.h  ast_validations.c  ast_validations.h  ast_visitor.c  ast_visitor.h  entity_update_ctx.c  entity_update_ctx.h  param_parser.c  param_parser.h
src/bolt/: bolt.c  bolt.h  bolt_api.c  bolt_api.h  bolt_client.c  bolt_client.h  buffer.c  buffer.h  endian.h  socket.c  socket.h  ws.c  ws.h
src/bulk_insert/: bulk_insert.c  bulk_insert.h
src/commands/: cmd_acl.c  cmd_acl.h  cmd_bulk_insert.c  cmd_bulk_insert.h  cmd_config.c  cmd_constraint.c  cmd_context.c  cmd_context.h  cmd_copy.c  cmd_debug.c  cmd_delete.c  cmd_dispatcher.c  cmd_dump.c  cmd_effect.c  cmd_eval.c  cmd_explain.c  cmd_info.c  cmd_list.c  cmd_memory.c  cmd_memory.h  cmd_notifications.c  cmd_notifications.h  cmd_password.c  cmd_query.c  cmd_register_udf.c  cmd_restore.c  cmd_slowlog.c  cmd_udf.c  commands.c  commands.h  execution_ctx.c  execution_ctx.h  index_operations.c  (+3 more)
tests/: Dockerfile  Dockerfile.alpine  Dockerfile.amazonlinux2023  Dockerfile.debian  Dockerfile.rhel  check_binary_size.sh  common.sh  requirements.txt
tests/micro_benchmarks/: CMakeLists.txt  benchmark_AE.cpp  benchmark_add.cpp  benchmark_delta_delete.cpp  benchmark_export.cpp  benchmark_insert.cpp  benchmark_iterator.cpp  benchmark_mxm.cpp  benchmark_row_delete.cpp  benchmarks.sh  compare_results.py  comparison_requirements.txt  grafana_requirements.txt  micro_benchmarks.h  micro_benchmarks.hpp  push_to_grafana.py
tests/unit/: CMakeLists.txt  TEST_COVERAGE.md  alloc_stub.c  mock_log.c  mock_log.h  test_algebraic_expression.c  test_all_paths.c  test_arithmetic_expression.c  test_arr.c  test_attribute_set.c  test_bfs.c  test_cache.c  test_circular_buffer.c  test_cron.c  test_datablock.c  test_decode_deleted_entities.c  test_delta_matrix.c  test_delta_matrix_iter.c  test_detect_cycle.c  test_dfs.c  test_execution_plan_awareness.c  test_execution_plan_clone.c  test_filter_tree.c  test_fork_deadlock.c  test_graph.c  test_graphcontext_schema_bounds.c  test_heap.c  test_indexer_regression.c  test_indexer_sync.c  test_map.c  test_mmap_alloc.c  test_module_event_handlers.c  test_object_pool.c  test_pagerank.c  test_query_graph.c  test_range.c  test_record.c  test_record_bounds.c  test_referenced_entities.c  test_resultset_replyverbose.c  (+9 more)
tidesdb/: LOCK
(+1178 files in other folders)
